sheetmap 20220619 MAP4BASE 기본기능완료

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Simple Sidebar - Start Bootstrap Template</title>
+        <title>INDEX</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -15,19 +15,32 @@
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
             <div class="border-end bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading border-bottom bg-light">[해밀]</div>
+                <div class="sidebar-heading border-bottom bg-light" style="color:darkorange"><b>제주해밀.com</b></div>
                 <div class="list-group list-group-flush">
 
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4construction">MAP건축할토지</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4agriculture">MAP농사용토지</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/woodland">MAP임야만</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4landlocked">MAP맹지만</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4detachedhouse">MAP단독주택</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4construction">MAP ALL</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4receiving">매매_접수중토지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4construction">매매_건축할토지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4agriculture">매매_농사할토지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4landlocked">매매_맹지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4house">매매_주택</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4pubhouse">매매_공동주택</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4flatswithshop">매매_상가주택</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4rentshop">임대차_상가점포</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouse">임대차_주거용</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3">================</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4constructionend">완료매매_건축할토지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4agricultureend">완료매매_농사할토지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4landlockedend">완료매매_맹지</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4houseend">완료매매_주택</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4pubhouseend">완료매매_공동주택</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4flatswithshopend">완료매매_상가주택</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4rentshopend">완료임대차_상가점포</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouse">완료임대차_주거용</a>
 
                 </div>
             </div>
             <!-- Page content wrapper-->
+
             <div id="page-content-wrapper">
                 <!-- Top navigation-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
@@ -36,6 +49,7 @@
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+
                                 <li class="nav-item active"><a class="nav-link" href="#!">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#!">Link</a></li>
                                 <li class="nav-item dropdown">
