sheetmap 20221026 MAP4BASE 조건부 검색기능구현완료

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,6 +29,7 @@
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthouse">전세_주거</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4renthousemy">년월세_주거</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3">================</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/logout">logout</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4constructionend">완료매매_건축할토지</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4agricultureend">완료매매_농사할토지</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/guestbook/map4landlockedend">완료매매_맹지</a>
